# AdventOfCode2024

./: CMakeLists.txt
AdventOfCode2024/: CMakeLists.txt  Challenges.h  main.cpp
AdventOfCode2024/source/: Day1.cpp  Day2.cpp  Day3.cpp  Day4.cpp  Day5.cpp  Day6.cpp  Day7.cpp
