# CMakeList.txt : CMake project for AdventOfCode2024, include source and define
# project specific logic here.
#

# Add source to this project's executable.
add_executable (AdventOfCode2024 "main.cpp"  "source/Day1.cpp" "Challenges.h" "source/Day2.cpp" "source/Day3.cpp" "source/Day4.cpp" "source/Day5.cpp" "source/Day6.cpp")

